--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
         <h1 class="fw-light">Harvard Undergraduate Legal Committee</h1>
         <p class="lead text-muted">HULC aims to serve the local community by placing undergraduate volunteers in local public service law and advocacy organizations, and to provide undergraduates with an opportunity to experience public interest law first-hand.</p>
         <p>
-          <a href="#" class="btn btn-danger my-2" style="background-color: #A51C30;">Join our work!</a>
-          <a href="#" class="btn btn-secondary my-2" >Contact us!</a>
+          <a href="https://forms.gle/6qvuWTm5etDEKZhe6" class="btn btn-danger my-2" style="background-color: #A51C30;">Join our work!</a>
+          <a href="mailto:hulc@pbha.org" class="btn btn-secondary my-2" >Contact us!</a>
         </p>
       </div>
     </div>
